--- a/templates/form.html
+++ b/templates/form.html
@@ -14,3 +14,4 @@ Twitter sentiment analysis
 <input type="submit" name="Show" value="Show" style="background-color:white; font-size:24px;font-family:arial; color:#1DA1F2">
 </h2>
 </form>
+</html>
